# libgnunetchat

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  HOWTO.md  Makefile  Makefile.am  README.md  configure.ac  meson.build
.github/workflows/: linux.yml
benchmark/: latency.sh  scaling.sh
doc/: generate.sh
include/: Makefile.am  gnunet_chat_lib.h
include/gnunet/: gnunet_chat_lib.h
src/: Makefile.am  gnunet_chat_account.c  gnunet_chat_account.h  gnunet_chat_contact.c  gnunet_chat_contact.h  gnunet_chat_contact_intern.c  gnunet_chat_context.c  gnunet_chat_context.h  gnunet_chat_context_intern.c  gnunet_chat_discourse.c  gnunet_chat_discourse.h  gnunet_chat_discourse_intern.c  gnunet_chat_file.c  gnunet_chat_file.h  gnunet_chat_group.c  gnunet_chat_group.h  gnunet_chat_group_intern.c  gnunet_chat_handle.c  gnunet_chat_handle.h  gnunet_chat_handle_intern.c  gnunet_chat_invitation.c  gnunet_chat_invitation.h  gnunet_chat_lib.c  gnunet_chat_lib_intern.c  gnunet_chat_lobby.c  gnunet_chat_lobby.h  gnunet_chat_lobby_intern.c  gnunet_chat_message.c  gnunet_chat_message.h  gnunet_chat_tagging.c  gnunet_chat_tagging.h  gnunet_chat_ticket.c  gnunet_chat_ticket.h  gnunet_chat_ticket_intern.c  gnunet_chat_uri.c  gnunet_chat_uri.h  gnunet_chat_util.c  gnunet_chat_util.h  meson.build
src/internal/: gnunet_chat_accounts.h  gnunet_chat_attribute_process.c  gnunet_chat_attribute_process.h  gnunet_chat_tagging.c  gnunet_chat_tagging.h  gnunet_chat_ticket_process.h  meson.build
tests/: Makefile.am  meson.build  test_gnunet_chat.h  test_gnunet_chat_attribute.c  test_gnunet_chat_discourse.c  test_gnunet_chat_file.c  test_gnunet_chat_handle.c  test_gnunet_chat_lobby.c  test_gnunet_chat_message.c
tests/attribute/: test_gnunet_chat_attribute_check.c  test_gnunet_chat_attribute_share.c
tests/discourse/: test_gnunet_chat_discourse_open.c  test_gnunet_chat_discourse_write.c
tests/file/: test_gnunet_chat_file_send.c
tests/group/: test_gnunet_chat_group_open.c
tests/handle/: meson.build  test_gnunet_chat_handle_accounts.c  test_gnunet_chat_handle_connection.c  test_gnunet_chat_handle_init.c  test_gnunet_chat_handle_rename.c  test_gnunet_chat_handle_update.c
tests/lobby/: test_gnunet_chat_lobby_join.c  test_gnunet_chat_lobby_open.c
tests/message/: test_gnunet_chat_message_text.c
tests/tag/: test_gnunet_chat_tag_contact.c  test_gnunet_chat_tag_message.c
tools/: gnunet_chat_lib_uml.c  gnunet_messenger_ping.c  gnunet_messenger_uml.c  meson.build
